ingress-version-diff.yaml
# kubernetes v1.16 이상
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.dev.domain.com
      secretName: dev-tls-secret
  rules:
    - host: app.dev.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-service
                port:
                  number: 80


---
# kubernetes v1.16 미만
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - app.dev.domain.com
      secretName: dev-tls-secret
  rules:
    - host: app.dev.domain.com
      http:
        paths:
          - path: /
            backend:
              serviceName: dev-service
              servicePort: 80
